# easydeal-appchain

./: Cargo.toml  README.md  SHA256SUMS  chain-spec.json  easydealSpec.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/info/: Cargo.toml
pallets/info/src/: lib.rs
pallets/sign/: Cargo.toml
pallets/sign/src/: lib.rs
pallets/space/: Cargo.toml
pallets/space/src/: lib.rs
pallets/user/: Cargo.toml
pallets/user/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
